<resources>

    <string name="app_name">CrudDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_base">CRUD App</string>
    <string name="btn_view">View</string>
    <string name="btn_add">Add Contact</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_phone_no">Phone No</string>
    <string name="lbl_address">Address</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hdr_create_User">Create User</string>
    <string name="hdr_update_User">Update User</string>
    <string name="close">Close</string>
    <string name="Contact">Contact View</string>
    <string name="title_activity_view">ViewActivity</string>

</resources>