<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hdr_create_User"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- label nad edit text for name -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_name"
        android:textSize="@dimen/label_size" />

    <EditText
        android:id="@+id/name_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/lbl_name"
        android:inputType="text"
        android:textSize="@dimen/text_size" />

    <!-- label and edit text for phone no -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_phone_no"
        android:textSize="@dimen/label_size" />

    <EditText
        android:id="@+id/phone_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/lbl_phone_no"
        android:inputType="text"
        android:textSize="@dimen/text_size" />
    <!-- label and edit text for address -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_address"
        android:textSize="@dimen/label_size" />

    <EditText
        android:id="@+id/address_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/lbl_address"
        android:inputType="text"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_add_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save"
            android:onClick="savContact"
             />

        <Button
            android:id="@+id/btn_cancel_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:onClick="cancelAdd"
             />
    </LinearLayout>
</LinearLayout>