<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp" >

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addContact"
        android:layout_margin="20dp"
        android:text="@string/btn_add" />

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/btn_add"
        android:background="#000" />

    <LinearLayout
        android:id="@+id/list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seperator"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_name"
            android:textColor="#0F0F0F" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_phone_no"
            android:textColor="#0F0F0F" />
    </LinearLayout>

    <View
        android:id="@+id/seperator2"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/list_header"
        android:background="#000" />

    <ListView
        android:id="@+id/list_view_contactlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seperator2"
        android:layout_marginLeft="5dp" >
    </ListView>

</RelativeLayout>